[package]
name = "webhook-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web-actors = "4.2"
actix = "0.13"
dotenv = "0.15"
env_logger = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
prometheus = "0.13"
actix-web-prom = "0.6"
lazy_static = "1.4"
